--- a/apps/web/src/assets/sass/global.scss
+++ b/apps/web/src/assets/sass/global.scss
@@ -1,6 +1,7 @@
 @import '~modern-normalize/modern-normalize.css';
 @import './_variables.scss';
 @import './_custom-form.scss';
+@import './_custom-table.scss';
 
 body {
     font-family: $body-default-font;
