--- a/apps/web/src/assets/sass/_custom-table.scss
+++ b/apps/web/src/assets/sass/_custom-table.scss
@@ -10,24 +10,24 @@ table {
 
 table caption {
     font-size: 1.5em;
-    margin: .5em 0 .75em;
+    margin: 0.5em 0 0.75em;
 }
 
 table tr {
     background-color: #f8f8f8;
     border: 1px solid #ddd;
-    padding: .35em;
+    padding: 0.35em;
 }
 
 table th,
 table td {
-    padding: .625em;
+    padding: 0.625em;
     text-align: center;
 }
 
 table th {
-    font-size: .85em;
-    letter-spacing: .1em;
+    font-size: 0.85em;
+    letter-spacing: 0.1em;
     text-transform: uppercase;
 }
 
@@ -54,13 +54,13 @@ table th {
     table tr {
         border-bottom: 3px solid #ddd;
         display: block;
-        margin-bottom: .625em;
+        margin-bottom: 0.625em;
     }
 
     table td {
         border-bottom: 1px solid #ddd;
         display: block;
-        font-size: .8em;
+        font-size: 0.8em;
         text-align: right;
     }
 
