--- a/apps/web/src/assets/sass/_layout.scss
+++ b/apps/web/src/assets/sass/_layout.scss
@@ -1,7 +1,8 @@
 .layout-ctn {
     min-height: 100vh;
+    max-height: 100vh;
     display: grid;
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: 50px minmax(0, 1fr) 50px;
     grid-template-columns: 100%;
 
     header {
@@ -24,6 +25,14 @@
         }
     }
 
+    main {
+        display: flex;
+        div {
+            flex: 1 1 100%;
+        }
+    }
+
+
     footer {
         border-top: solid 1px rgba(white, 0.2);
         height: 30px;
@@ -31,6 +40,4 @@
         text-align: center;
     }
 
-    main {
-    }
 }
