--- a/apps/web/src/assets/sass/global.scss
+++ b/apps/web/src/assets/sass/global.scss
@@ -11,5 +11,5 @@ body {
     color: $body-default-color;
     margin: 0;
     padding: 0;
-    @import './_layout.scss';
+    //@import './_layout.scss';
 }
