--- a/apps/web/src/component/dashboard/dashboard-layout.scss
+++ b/apps/web/src/component/dashboard/dashboard-layout.scss
@@ -462,13 +462,22 @@ a {
     }
 }
 
-// Overview quicklink cards container
+
 .dashboard-main-content {
+    /*
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(265px, 1fr));
     grid-auto-rows: 94px;
     grid-gap: 30px;
     margin: 20px;
+
+     */
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(265px, 1fr));
+    overflow: auto;
+    //grid-auto-rows: 94px;
+    border: 5px solid pink;
 }
 
 
