--- a/apps/web/src/features/home/home.scss
+++ b/apps/web/src/features/home/home.scss
@@ -1,5 +1,8 @@
 .test {
-    display: flex;
+    //flex: 1 1 100%;
+    //height: 100%;
+    //display: flex;
+    border: 1px solid red;
     .grid-container {
         flex: 1 1 100%;
         display: grid;
