--- a/apps/web/src/component/dashboard/dashboard-layout.scss
+++ b/apps/web/src/component/dashboard/dashboard-layout.scss
@@ -472,6 +472,8 @@ a {
     margin: 20px;
 
      */
+    height: calc(100vh - #{$height-footer} - #{$height-header});
+    //height: 100%;
     display: grid;
     grid-gap: 30px;
     grid-template-columns: repeat(auto-fit, minmax(265px, 1fr));
@@ -489,6 +491,7 @@ a {
     padding: 0 16px;
     color: $color-abbey;
     background-color: $color-white;
+
 
     &__copyright {
         color: $color-java;
