wip on student list

--- a/apps/web/src/component/dashboard/dashboard-layout.scss
+++ b/apps/web/src/component/dashboard/dashboard-layout.scss
@@ -479,7 +479,7 @@ a {
     grid-template-columns: repeat(auto-fit, minmax(265px, 1fr));
     overflow: auto;
     //grid-auto-rows: 94px;
-    border: 5px solid pink;
+    //border: 5px solid pink;
 }
 
 
