--- a/apps/web/src/features/home/home.scss
+++ b/apps/web/src/features/home/home.scss
@@ -2,7 +2,7 @@
     //flex: 1 1 100%;
     //height: 100%;
     //display: flex;
-    border: 1px solid red;
+    //border: 1px solid red;
     display: flex;
     .test-list {
         flex: 1 1 100%;
