--- a/apps/web/src/features/home/home.scss
+++ b/apps/web/src/features/home/home.scss
@@ -4,6 +4,9 @@
     //display: flex;
     //border: 1px solid red;
     display: flex;
+    .test-search {
+        flex: 1 1 100%;
+    }
     .test-list {
         flex: 1 1 100%;
     }
