--- a/apps/web/src/assets/sass/global.scss
+++ b/apps/web/src/assets/sass/global.scss
@@ -2,6 +2,7 @@
 @import './_variables.scss';
 @import './_custom-form.scss';
 @import './_custom-table.scss';
+@import '~@fortawesome/fontawesome-free/css/all.css';
 
 body {
     font-family: $body-default-font;
