--- a/apps/web/src/assets/sass/_result-list.scss
+++ b/apps/web/src/assets/sass/_result-list.scss
@@ -23,10 +23,34 @@
                 text-align: left;
                 padding-top: 8px;
                 padding-bottom: 8px;
+                display: flex;
+                flex-direction: row;
                 justify-content: flex-start;
+                justify-content: space-between;
+
 
                 &.active {
                     background-color: rgba(grey, 0.2);
+                }
+
+                div {
+                    padding: 5px;
+                    &:first-child {
+                        border: 1px solid blue;
+                        border-radius: 100%;
+                        width: 30px;
+                        overflow: hidden;
+                        margin-right: 5px;
+
+                    }
+                    &:nth-child(2) {
+                        flex-grow: 1;
+                    }
+                    &:last-child {
+                        overflow: hidden;
+                        max-width: 30px;
+                    }
+
                 }
             }
 
