--- a/apps/web/src/features/home/home.scss
+++ b/apps/web/src/features/home/home.scss
@@ -4,13 +4,30 @@
     //display: flex;
     //border: 1px solid red;
     display: flex;
+    flex-direction: column;
+    border: 1px solid green;
     .test-search {
-        flex: 1 1 100%;
+        border: 1px solid blue;
+        width: 100%;
+        input {
+            width: 100%;
+            height: 2em;
+            font-size: 1.2em;
+            outline: white;
+            border: none;
+        }
     }
-    .test-list {
+    .result-wrapper {
+        display: flex;
         flex: 1 1 100%;
-    }
-    .test-detail {
-        flex: 1 1 100%;
+        .test-list {
+            overflow: auto  ;
+            background-color: red;
+            flex: 1 1 100%;
+        }
+
+        .test-detail {
+            flex: 1 1 100%;
+        }
     }
 }
