--- a/apps/web/src/component/dashboard/dashboard-layout.scss
+++ b/apps/web/src/component/dashboard/dashboard-layout.scss
@@ -1,18 +1,18 @@
 // Sass tils
 $color-fiord: blue; // sidenav bg & dark text
-$color-white: #FFF; // card bg
-$color-athens-gray: #EAEDF1; // content bg
-$color-catskill-white: #F9FAFC; // top nav bg
+$color-white: #fff; // card bg
+$color-athens-gray: #eaedf1; // content bg
+$color-catskill-white: #f9fafc; // top nav bg
 $color-abbey: #777; // gray text
-$color-mischka: #DADAE3; // light gray for menu icon
-$color-java: #1BBAE1; // blue text
+$color-mischka: #dadae3; // light gray for menu icon
+$color-java: #1bbae1; // blue text
 $color-mine-shaft: #333; // main section header bg
 $color-zest: #e67e22; // document icon bg
 $color-jungle-green: #27ae60; // calendar icon bg
 $color-cinnabar: #e74c3c; // main icon bg, red
 $color-amethyst: #af64cc; // main photo icon bg
-$color-transparent: rgba(255, 255, 255, .5);
-$color-alto: #D3D3D3;
+$color-transparent: rgba(255, 255, 255, 0.5);
+$color-alto: #d3d3d3;
 
 $height-header: 50px;
 $height-footer: 50px;
@@ -23,7 +23,7 @@ $width-sidenav: 240px;
     background-size: cover;
     background-repeat: no-repeat;
     border-radius: 50%;
-    border: 2px solid rgba(255, 255, 255, .2);
+    border: 2px solid rgba(255, 255, 255, 0.2);
 }
 
 @mixin box-shadow {
@@ -31,11 +31,12 @@ $width-sidenav: 240px;
 }
 
 // Resets
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 a {
@@ -130,7 +131,7 @@ a {
 
         &:after {
             position: absolute;
-            content: "";
+            content: '';
             width: 6px;
             height: 6px;
             background: none;
@@ -155,7 +156,7 @@ a {
     visibility: hidden;
     opacity: 0;
     transform: translateY(-10px);
-    transition: all .3s;
+    transition: all 0.3s;
     @include box-shadow;
 
     &__list {
@@ -170,7 +171,7 @@ a {
         text-transform: capitalize;
 
         &:hover {
-            background-color: rgba(0,0,0, .1);
+            background-color: rgba(0, 0, 0, 0.1);
         }
     }
 
@@ -184,14 +185,14 @@ a {
 
     &:before {
         position: absolute;
-        content: "";
+        content: '';
         top: -6px;
         right: 30px;
         width: 0;
         height: 0;
         border-left: 4px solid transparent;
         border-right: 4px solid transparent;
-        border-bottom: 6px solid #FFF;
+        border-bottom: 6px solid #fff;
     }
 
     &--active {
@@ -210,7 +211,7 @@ a {
     color: $color-white;
     width: $width-sidenav; // Will match grid area on medium + screens
     transform: translateX(-245px);
-    transition: all .6s ease-in-out;
+    transition: all 0.6s ease-in-out;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
     z-index: 2; // Needs to sit above the hamburger menu icon
 
@@ -220,7 +221,7 @@ a {
         align-items: center;
         padding: 0 16px;
         height: $height-header;
-        background-color: rgba(0, 0, 0, .15);
+        background-color: rgba(0, 0, 0, 0.15);
 
         &-icon {
             margin-top: 2px;
@@ -250,7 +251,7 @@ a {
         display: flex;
         align-items: center;
         min-height: 90px;
-        background-color: rgba(255, 255, 255, .1);
+        background-color: rgba(255, 255, 255, 0.1);
 
         &-avatar {
             @include profile-avatar;
@@ -267,13 +268,13 @@ a {
 
     &__arrow {
         position: absolute;
-        content: "";
+        content: '';
         width: 6px;
         height: 6px;
         top: 50%;
         right: 20px;
-        border-left: 2px solid rgba(255,255,255,.5);
-        border-bottom: 2px solid rgba(255,255,255,.5);
+        border-left: 2px solid rgba(255, 255, 255, 0.5);
+        border-bottom: 2px solid rgba(255, 255, 255, 0.5);
         transform: translateY(-50%) rotate(225deg);
     }
 
@@ -328,7 +329,7 @@ a {
 
         &:after {
             position: absolute;
-            content: "";
+            content: '';
             height: 6px;
             width: 6px;
             top: 17px;
@@ -336,7 +337,7 @@ a {
             border-left: 1px solid $color-transparent;
             border-bottom: 1px solid $color-transparent;
             transform: rotate(225deg);
-            transition: all .2s;
+            transition: all 0.2s;
         }
 
         &:hover {
@@ -361,7 +362,7 @@ a {
         visibility: visible;
         overflow: hidden;
         max-height: 200px;
-        transition: all .4s ease-in-out;
+        transition: all 0.4s ease-in-out;
 
         &__item {
             padding: 8px;
@@ -374,7 +375,7 @@ a {
             }
 
             &:hover {
-                background-color: rgba(255, 255, 255, .1);
+                background-color: rgba(255, 255, 255, 0.1);
                 cursor: pointer;
             }
         }
@@ -407,7 +408,7 @@ a {
     height: 250px;
     color: $color-white;
     background-size: cover;
-    background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1609106/lake-shadow-water.jpg");
+    background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1609106/lake-shadow-water.jpg');
     margin-bottom: 20px;
 
     &__intro-wrapper {
@@ -418,7 +419,7 @@ a {
         justify-content: space-between;
         height: 160px;
         padding: 12px 30px;
-        background: rgba(255,255,255,.12);
+        background: rgba(255, 255, 255, 0.12);
         font-size: 26px;
         letter-spacing: 1px;
     }
@@ -462,7 +463,6 @@ a {
     }
 }
 
-
 .dashboard-main-content {
     /*
     display: grid;
@@ -482,7 +482,6 @@ a {
     //border: 5px solid pink;
 }
 
-
 .dashboard-footer {
     grid-area: dashboard-footer;
     display: flex;
@@ -491,7 +490,6 @@ a {
     padding: 0 16px;
     color: $color-abbey;
     background-color: $color-white;
-
 
     &__copyright {
         color: $color-java;
